Fix vertical spacing to button

--- a/_sass/0768_md/_block_md.scss
+++ b/_sass/0768_md/_block_md.scss
@@ -7,10 +7,6 @@
   .block-textonly {
     @include make-col(6); 
   }
-  .block-button {
-    padding: 0;
-    margin: auto 0;
-  }
   .block-content {
     @include make-col(6);
     //padding-top: 120px;
@@ -252,6 +248,11 @@
       @include make-col(12);
       padding-top: 0px;
     }
+    .block-header {
+      @include make-col-ready();
+      @include make-col(9);
+      margin: 0 auto;
+    }
     .block-slogan {
       margin-bottom: 1.5rem;
       .line1 {
@@ -271,10 +272,13 @@
         content: "";
         display: block;
         position: absolute;
-        width: calc(80%);
+        width: calc(100%);
         top: 50px;
-        left: 15px;
       }
+    }
+    .block-button {
+      padding: 0;
+      margin: auto 0 !important;
     }
     .block-textonly {
       padding-top: 1rem;
